// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`memory getSourceFrom should return correct source 1`] = `
Array [
  JMP, START, ADD, AL, 01, MOV, BL, [CL], END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  , , , , , , , , , , , , , , , ,
  , , , , , , , , , , , , , , , ,
  , , , , , , , , , , , , , , , ,
  , , , , , , , , , , , , , , , ,
]
`;

exports[`memory getSourceFrom with DB should display number 1`] = `
Array [
  A0, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  , , , , , , , , , , , , , , , ,
  , , , , , , , , , , , , , , , ,
  , , , , , , , , , , , , , , , ,
  , , , , , , , , , , , , , , , ,
]
`;

exports[`memory getSourceFrom with DB should split string 1`] = `
Array [
  H, e, l, l, o, ,,  , w, o, r, l, d, !, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  END, END, END, END, END, END, END, END, END, END, END, END, END, END, END, END,
  , , , , , , , , , , , , , , , ,
  , , , , , , , , , , , , , , , ,
  , , , , , , , , , , , , , , , ,
  , , , , , , , , , , , , , , , ,
]
`;

exports[`memory getVduDataFrom should return the VDU data 1`] = `
Array [
  20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20,
  20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20,
  20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20,
  20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20,
]
`;
